--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@
 buildscript {
     repositories {
         maven { url "https://jitpack.io" }
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0-rc01'
-        
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,10 +19,14 @@ buildscript {
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven {
+            // All of React Native (JS, Android binaries) is installed from npm
+            url "$rootDir/node_modules/react-native/android"
+        }
         google()
         jcenter()
-        
+
     }
 }
 
