--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
             }
         }
         multiDexEnabled true
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
     }
 
     buildTypes {
@@ -25,6 +28,12 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude "lib/arm64-v8a/librealm-jni.so"
+    }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 
     dataBinding{
         enabled = true
@@ -105,5 +114,7 @@ dependencies {
     implementation 'com.google.android:flexbox:1.1.0'
     // JsBridge
     implementation 'com.github.lzyzsd:jsbridge:1.0.4'
+
+    implementation "com.facebook.react:react-native:+"
 
 }
