--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MedicalActivity" />
-
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
         <meta-data
             android:name="design_width_in_dp"
             android:value="420" />
@@ -54,5 +54,6 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 </manifest>
