--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,3 +138,6 @@ dependencies {
     }
 
 }
+
+
+// react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output app/src/main/assets/index.android.bundle --assets-dest app/src/main/res/
