--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-android.useDeprecatedNdk=true
+#android.useDeprecatedNdk=true
+
+android.deprecatedNdkCompileLease=1515138691572
 
