--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,5 @@
 apply plugin: 'com.android.application'
 
-project.ext.react = [
-        entryFile: "index.android.js"
-]
-
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.0"
@@ -58,11 +54,9 @@ android {
     }
 }
 
-def hermesPath = "../node_modules/hermes-engine/android/"
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -82,30 +76,23 @@ dependencies {
     //screen
     implementation 'me.jessyan:autosize:1.1.2'
     //Retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
     //RxAndroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     //Retrofit 支持Rxjava 的支持库
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     //BaseRecyclerViewAdapterHelper
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
-    //ftp
-    implementation "org.apache.commons:commons-lang3:3.6"
-    implementation "commons-net:commons-net:3.6"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
-
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'com.github.GrenderG:Toasty:1.4.2'
@@ -118,24 +105,12 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.24'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
 
-    // room
-    def room_version = "2.2.0-alpha02"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
 
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta03'
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'com.google.android:flexbox:1.1.0'
     // JsBridge
     implementation 'com.github.lzyzsd:jsbridge:1.0.4'
-
-    implementation "com.facebook.react:react-native:+"
-
-    implementation files(hermesPath + "hermes-debug.aar")
-
+    // calendarview
+    implementation 'com.haibin:calendarview:3.6.7'
 }
-
-
-// react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output app/src/main/assets/index.android.bundle --assets-dest app/src/main/res/
